--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -159,6 +159,9 @@
     <Compile Include="Gender.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="IdentityDocumentType.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="InsuranceCompany.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
@@ -189,6 +192,9 @@
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PersonAddress.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PersonIdentityDocument.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PersonName.cs">
