--- a/MainLib/MainLib.csproj
+++ b/MainLib/MainLib.csproj
@@ -127,11 +127,14 @@
     <Compile Include="Services\Implementation\PatientService.cs" />
     <Compile Include="ViewModel\EditPersonDataViewModel.cs" />
     <Compile Include="ViewModel\EditPersonViewModel.cs" />
+    <Compile Include="ViewModel\GivenOrgSuggestionProvider.cs" />
     <Compile Include="ViewModel\OKATOSuggestionProvider.cs" />
     <Compile Include="ViewModel\OKATORegionSuggestionProvider.cs" />
     <Compile Include="ViewModel\InsuranceCompanySuggestionProvider.cs" />
     <Compile Include="ViewModel\InsuranceDocumentViewModel.cs" />
     <Compile Include="ViewModel\ItemState.cs" />
+    <Compile Include="ViewModel\PersonIdentityDocumentViewModel.cs" />
+    <Compile Include="ViewModel\PersonIdentityDocumentsViewModel.cs" />
     <Compile Include="ViewModel\PersonAddressesViewModel.cs" />
     <Compile Include="ViewModel\PersonAddressViewModel.cs" />
     <Compile Include="ViewModel\PersonInsuranceDocumentsViewModel.cs" />
@@ -188,6 +191,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="View\EditPersonView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\PersonIdentityDocumentsView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
