--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -80,6 +80,9 @@
   <ItemGroup>
     <Resource Include="Images\Error16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Delete24x24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
