--- a/MainLib/MainLib.csproj
+++ b/MainLib/MainLib.csproj
@@ -56,6 +56,12 @@
     <Reference Include="MvvmEventBinding">
       <HintPath>..\packages\MvvmEventBinding.1.0.0\lib\net45\MvvmEventBinding.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\packages\SimpleInjector.2.7.3\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector.Diagnostics">
+      <HintPath>..\packages\SimpleInjector.2.7.3\lib\net45\SimpleInjector.Diagnostics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -94,7 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ScrollViewerHelper.cs" />
-    <Compile Include="MainServiceLocator.cs" />
+    <Compile Include="Misc\MainContainerProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -109,7 +115,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Services\Implementation\AssignmentService.cs" />
+    <Compile Include="Services\Implementation\CommissionService.cs" />
     <Compile Include="Services\Interface\IAssignmentService.cs" />
+    <Compile Include="Services\Interface\ICommissionService.cs" />
     <Compile Include="Services\Interface\IPatientService.cs" />
     <Compile Include="Services\Implementation\PatientService.cs" />
     <Compile Include="ViewModel\EditPersonDataViewModel.cs" />
