--- a/StuffLib/packages.config
+++ b/StuffLib/packages.config
@@ -10,4 +10,5 @@
   <package id="MvvmEventBinding" version="1.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="SimpleInjector" version="2.7.3" targetFramework="net45" />
 </packages>
