--- a/AdminTools/packages.config
+++ b/AdminTools/packages.config
@@ -6,5 +6,6 @@
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="MvvmEventBinding" version="1.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="SimpleInjector" version="2.7.3" targetFramework="net45" />
   <package id="WpfAnimatedGif" version="1.4.12" targetFramework="net45" />
 </packages>
