--- a/DataLib/packages.config
+++ b/DataLib/packages.config
@@ -5,4 +5,5 @@
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="SimpleInjector" version="2.7.3" targetFramework="net45" />
 </packages>
