--- a/Commission/packages.config
+++ b/Commission/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
