--- a/MainLib/packages.config
+++ b/MainLib/packages.config
@@ -3,8 +3,10 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
+  <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="MvvmEventBinding" version="1.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net45" developmentDependency="true" />
   <package id="SimpleInjector" version="2.7.3" targetFramework="net45" />
 </packages>
