--- a/Services/packages.config
+++ b/Services/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
+  <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net45" developmentDependency="true" />
   <package id="SimpleInjector" version="2.7.3" targetFramework="net45" />
 </packages>
