--- a/Commission/Commission.csproj
+++ b/Commission/Commission.csproj
@@ -114,23 +114,27 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\CommissionDecisionControl.xaml">
+    <Page Include="View\CommissionMainView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\Working\CommissionWorkControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CommissionItemControl.xaml">
+    <Page Include="View\Working\CommissionDecisionControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CommissionNavigatorControl.xaml">
+    <Page Include="View\Management\CommissionItemControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CommissionPersonFlowControl.xaml">
+    <Page Include="View\Management\CommissionPersonGridControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CommissionManagementView.xaml">
+    <Page Include="View\Management\CommissionManagementControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -138,27 +142,32 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModel\CommissionMainViewModel.cs" />
+    <Compile Include="View\CommissionMainView.xaml.cs">
+      <DependentUpon>CommissionMainView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\Working\CommissionWorkViewModel.cs" />
+    <Compile Include="View\Working\CommissionWorkControl.xaml.cs">
+      <DependentUpon>CommissionWorkControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DTO\CommissionDecisionDTO.cs" />
     <Compile Include="DTO\CommissionProtocolDTO.cs" />
-    <Compile Include="ViewModel\CommissionDecisionViewModel.cs" />
-    <Compile Include="ViewModel\CommissionItemViewModel.cs" />
-    <Compile Include="View\CommissionDecisionControl.xaml.cs">
+    <Compile Include="ViewModel\Working\CommissionDecisionViewModel.cs" />
+    <Compile Include="ViewModel\Management\CommissionItemViewModel.cs" />
+    <Compile Include="View\Working\CommissionDecisionControl.xaml.cs">
       <DependentUpon>CommissionDecisionControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\CommissionItemControl.xaml.cs">
+    <Compile Include="View\Management\CommissionItemControl.xaml.cs">
       <DependentUpon>CommissionItemControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModel\CommissionPersonFlowViewModel.cs" />
-    <Compile Include="View\CommissionNavigatorControl.xaml.cs">
-      <DependentUpon>CommissionNavigatorControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\CommissionPersonFlowControl.xaml.cs">
-      <DependentUpon>CommissionPersonFlowControl.xaml</DependentUpon>
+    <Compile Include="ViewModel\Management\CommissionPersonGridViewModel.cs" />
+    <Compile Include="View\Management\CommissionPersonGridControl.xaml.cs">
+      <DependentUpon>CommissionPersonGridControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\CommissionNavigatorViewModel.cs" />
-    <Compile Include="ViewModel\CommissionManagementViewModel.cs" />
-    <Compile Include="View\CommissionManagementView.xaml.cs">
-      <DependentUpon>CommissionManagementView.xaml</DependentUpon>
+    <Compile Include="ViewModel\Management\CommissionManagementViewModel.cs" />
+    <Compile Include="View\Management\CommissionManagementControl.xaml.cs">
+      <DependentUpon>CommissionManagementControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -217,6 +226,7 @@
       <SubType>Designer</SubType>
     </Resource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.1.28.3\build\Fody.targets" Condition="Exists('..\packages\Fody.1.28.3\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
