--- a/StuffLib/packages.config
+++ b/StuffLib/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Controls" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net45" />
   <package id="ClosedXML" version="0.76.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
