Fixes #52, fixes #60, fixes #64
#52, #60 - done by using DataGrid instead of multiple grids with shared size groups
#64 - info is still in the window title but now it is reduced to fit the window width

--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <Compile Include="Attached behaviors\DataContextPropagationBehavior.cs" />
     <Compile Include="Attached behaviors\IgnoreMouseWheelBehavior.cs" />
+    <Compile Include="Attached behaviors\MouseWheelHorizontalScroll.cs" />
     <Compile Include="Attached behaviors\ScrollSyncrhonizer.cs" />
     <Compile Include="Attributes\IdPropertyAttribute.cs" />
     <Compile Include="Attributes\NamePropertyAttribute.cs" />
