Closes #53, fixes #54, fixes #57, fixes #61
#53 - No longer actual since #57 is fixed
#54 - Schedule grid is rebuilt after schedule is edited
#57 - Now user doesn't need to save schedule for every week separately
#61 - Room working time is reloaded and schedule grid is rebuilt

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -196,6 +196,7 @@
     <Compile Include="PartialClasses\InsuranceCompany.cs" />
     <Compile Include="PartialClasses\PersonTalon.cs" />
     <Compile Include="PartialClasses\Person.cs" />
+    <Compile Include="PartialClasses\ScheduleItem.cs" />
     <Compile Include="Permission.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
