--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -194,6 +194,7 @@
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PartialClasses\InsuranceCompany.cs" />
+    <Compile Include="PartialClasses\PersonTalon.cs" />
     <Compile Include="PartialClasses\Person.cs" />
     <Compile Include="Permission.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
