--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Converters\ToSharedSizeGroupConverter.cs" />
     <Compile Include="Converters\UniversalMultiBooleanConverter.cs" />
     <Compile Include="Converters\UniversalConverter.cs" />
+    <Compile Include="Misc\CheckedListItem.cs" />
     <Compile Include="Misc\Configuration.cs" />
     <Compile Include="Misc\ConvertMarkupExtension.cs" />
     <Compile Include="Misc\DataContextCacheService.cs" />
