--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -95,6 +95,10 @@
   <ItemGroup>
     <Resource Include="Images\Add48x48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Accepted_32x32.png" />
+    <Resource Include="Images\Edited_32x32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
