--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -92,6 +92,9 @@
     <Reference Include="WpfAnimatedGif">
       <HintPath>..\packages\WpfAnimatedGif.1.4.12\lib\net\WpfAnimatedGif.dll</HintPath>
     </Reference>
+    <Reference Include="WpfControls">
+      <HintPath>..\StuffLib\dlls\WpfControls.dll</HintPath>
+    </Reference>
     <Reference Include="Xceed.Wpf.AvalonDock">
       <HintPath>..\packages\Extended.Wpf.Toolkit.2.4\lib\net40\Xceed.Wpf.AvalonDock.dll</HintPath>
     </Reference>
@@ -123,6 +126,25 @@
     <Compile Include="Services\Implementation\PatientAssignmentService.cs" />
     <Compile Include="Services\Interface\IPatientAssignmentService.cs" />
     <Compile Include="ViewModel\DayOfWeekViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\ItemState.cs" />
+    <Compile Include="ViewModel\EditPerson\SuggestionProviders\DisabilitiesGivenOrgSuggestionProvider.cs" />
+    <Compile Include="ViewModel\EditPerson\EditPersonDataViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\EditPersonViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\SuggestionProviders\IdentityDocumentsGivenOrgSuggestionProvider.cs" />
+    <Compile Include="ViewModel\EditPerson\SuggestionProviders\InsuranceCompanySuggestionProvider.cs" />
+    <Compile Include="ViewModel\EditPerson\InsuranceDocumentViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\SuggestionProviders\OKATORegionSuggestionProvider.cs" />
+    <Compile Include="ViewModel\EditPerson\SuggestionProviders\OKATOSuggestionProvider.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonAddressesViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonAddressViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonDisabilitiesViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonDisabilityViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonIdentityDocumentsViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonIdentityDocumentViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonInsuranceDocumentsViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonSocialStatusesViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\PersonSocialStatusViewModel.cs" />
+    <Compile Include="ViewModel\EditPerson\SuggestionProviders\SocialStatusOrgSuggestionProvider.cs" />
     <Compile Include="ViewModel\PatientAssignmentViewModel.cs" />
     <Compile Include="ViewModel\PatientAssignmentListViewModel.cs" />
     <Compile Include="ViewModel\PatientSearchViewModel.cs" />
@@ -140,9 +162,43 @@
     <Compile Include="ViewModel\ScheduleItemViewModel.cs" />
     <Compile Include="ViewModel\ScheduleViewModel.cs" />
     <Compile Include="ViewModel\TimeTickerViewModel.cs" />
+    <Compile Include="View\EditPerson\EditPersonDataUserControl.xaml.cs">
+      <DependentUpon>EditPersonDataUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditPerson\EditPersonView.xaml.cs">
+      <DependentUpon>EditPersonView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\PatientSearchUserControl.xaml.cs">
       <DependentUpon>PatientSearchUserControl.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\EditPerson\EditPersonDataUserControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditPerson\EditPersonView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditPerson\PersonAddressesView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditPerson\PersonDisabilitiesView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditPerson\PersonIdentityDocumentsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditPerson\PersonInsuranceDocumentsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditPerson\PersonSocialStatusesView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\PatientSearchUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
