--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -91,8 +91,10 @@
     <Compile Include="Interface\ICommissionService.cs" />
     <Compile Include="Interface\IPermissionService.cs" />
     <Compile Include="Interface\IPersonService.cs" />
+    <Compile Include="Interface\ISecurityService.cs" />
     <Compile Include="Interface\IUserSystemInfoService.cs" />
     <Compile Include="Interface\IUserService.cs" />
+    <Compile Include="Implementation\SecurityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
