--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -121,6 +121,8 @@
     </ApplicationDefinition>
     <Compile Include="DTO\AssignmentDTO.cs" />
     <Compile Include="DTO\ScheduledAssignmentDTO.cs" />
+    <Compile Include="Exceptions\AssignmentConflictException.cs" />
+    <Compile Include="Exceptions\SamePatientAssignmentConflictException.cs" />
     <Compile Include="Privileges.cs" />
     <Compile Include="Services\Interface\IScheduleService.cs" />
     <Compile Include="Services\Implementation\ScheduleService.cs" />
