--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -128,7 +128,8 @@
     <Compile Include="Services\Implementation\ScheduleService.cs" />
     <Compile Include="Services\Implementation\PatientAssignmentService.cs" />
     <Compile Include="Services\Interface\IPatientAssignmentService.cs" />
-    <Compile Include="ViewModel\DayOfWeekViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\CurrentPatientAssignmentsViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\DayOfWeekViewModel.cs" />
     <Compile Include="ViewModel\EditPerson\ItemState.cs" />
     <Compile Include="ViewModel\EditPerson\SuggestionProviders\DisabilitiesGivenOrgSuggestionProvider.cs" />
     <Compile Include="ViewModel\EditPerson\EditPersonDataViewModel.cs" />
@@ -148,30 +149,30 @@
     <Compile Include="ViewModel\EditPerson\PersonSocialStatusesViewModel.cs" />
     <Compile Include="ViewModel\EditPerson\PersonSocialStatusViewModel.cs" />
     <Compile Include="ViewModel\EditPerson\SuggestionProviders\SocialStatusOrgSuggestionProvider.cs" />
-    <Compile Include="ViewModel\PatientAssignmentViewModel.cs" />
-    <Compile Include="ViewModel\PatientAssignmentListViewModel.cs" />
-    <Compile Include="ViewModel\PatientSearchViewModel.cs" />
-    <Compile Include="ViewModel\PersonViewModel.cs" />
-    <Compile Include="ViewModel\RoomViewModel.cs" />
-    <Compile Include="ViewModel\FreeTimeSlotViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleAssignmentUpdateViewModel.cs" />
-    <Compile Include="ViewModel\OccupiedTimeSlotViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleEditorEditDayViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleEditorEditRecordTypeViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleEditorRoomDayViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleEditorRoomViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleEditorScheduleItemViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleEditorViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleItemViewModel.cs" />
-    <Compile Include="ViewModel\ScheduleViewModel.cs" />
-    <Compile Include="ViewModel\TimeTickerViewModel.cs" />
+    <Compile Include="ViewModel\Patient List\PatientAssignmentViewModel.cs" />
+    <Compile Include="ViewModel\Patient List\PatientAssignmentListViewModel.cs" />
+    <Compile Include="ViewModel\Patient List\PatientSearchViewModel.cs" />
+    <Compile Include="ViewModel\Patient List\PersonViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\RoomViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\FreeTimeSlotViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\ScheduleAssignmentUpdateViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\OccupiedTimeSlotViewModel.cs" />
+    <Compile Include="ViewModel\Schedule Editor\ScheduleEditorEditDayViewModel.cs" />
+    <Compile Include="ViewModel\Schedule Editor\ScheduleEditorEditRecordTypeViewModel.cs" />
+    <Compile Include="ViewModel\Schedule Editor\ScheduleEditorRoomDayViewModel.cs" />
+    <Compile Include="ViewModel\Schedule Editor\ScheduleEditorRoomViewModel.cs" />
+    <Compile Include="ViewModel\Schedule Editor\ScheduleEditorScheduleItemViewModel.cs" />
+    <Compile Include="ViewModel\Schedule Editor\ScheduleEditorViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\ScheduleItemViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\ScheduleViewModel.cs" />
+    <Compile Include="ViewModel\Schedule\TimeTickerViewModel.cs" />
     <Compile Include="View\EditPerson\EditPersonDataUserControl.xaml.cs">
       <DependentUpon>EditPersonDataUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\EditPerson\EditPersonView.xaml.cs">
       <DependentUpon>EditPersonView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\PatientSearchUserControl.xaml.cs">
+    <Compile Include="View\Patient List\PatientSearchUserControl.xaml.cs">
       <DependentUpon>PatientSearchUserControl.xaml</DependentUpon>
     </Compile>
     <Page Include="View\EditPerson\EditPersonDataUserControl.xaml">
@@ -202,7 +203,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\PatientSearchUserControl.xaml">
+    <Page Include="View\Patient List\PatientSearchUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -219,51 +220,51 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\PatientAssignmentListView.xaml">
+    <Page Include="View\Patient List\PatientAssignmentListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\PersonView.xaml">
+    <Page Include="View\Patient List\PersonView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\RoomView.xaml">
+    <Page Include="View\Schedule\RoomView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScheduleAssignmentUpdateView.xaml">
+    <Page Include="View\Schedule Editor\ScheduleAssignmentUpdateView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\FreeTimeSlotView.xaml">
+    <Page Include="View\Schedule\FreeTimeSlotView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\OccupiedTimeSlotView.xaml">
+    <Page Include="View\Schedule\OccupiedTimeSlotView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScheduleEditorEditDayView.xaml">
+    <Page Include="View\Schedule Editor\ScheduleEditorEditDayView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScheduleEditorRoomDayView.xaml">
+    <Page Include="View\Schedule Editor\ScheduleEditorRoomDayView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScheduleEditorRoomView.xaml">
+    <Page Include="View\Schedule Editor\ScheduleEditorRoomView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScheduleEditorView.xaml">
+    <Page Include="View\Schedule Editor\ScheduleEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScheduleView.xaml">
+    <Page Include="View\Schedule\ScheduleView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\TimeTickerView.xaml">
+    <Page Include="View\Schedule\TimeTickerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
